✨ Добавлена информация про Java